--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && git commit -m 'vite:build' --allow-empty",
+    "pint": "vendor/bin/pint",
+    "pest": "vendor/bin/pest",
+    "switch": "git commit -m 'switching' --allow-empty && git checkout main && git merge -X theirs -m 'merge' dev",
+    "push": "git push origin $(git rev-parse --abbrev-ref HEAD) -f && git checkout dev",
+    "deploy": "yarn pint && yarn pest && yarn build && yarn push",
+    "deploy:prod": "yarn deploy && yarn switch && yarn push"
+  },
+  "devDependencies": {
+    "axios": "^1.6.4",
+    "laravel-vite-plugin": "^1.0",
+    "vite": "^5.0"
+  },
+  "dependencies": {
+    "@preact/signals": "^1.2.3",
+    "@preact/signals-react": "^2.0.2",
+    "@tauri-apps/api": "^1.5.6",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-blade": "^2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-spinners": "^0.14.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4"
+  }
 }
