--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "saloonphp/saloon": "^3.0",
         "spatie/temporary-directory": "^2.2",
         "symfony/dom-crawler": "^7.1",
-        "symfony/process": "^7.1"
+        "symfony/process": "^7.1",
+        "laravel/folio": "^1.1",
+        "livewire/volt": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -58,6 +60,9 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi",
+            "@php artisan livewire:layout",
+            "@php artisan folio:install",
+            "@php artisan volt:install",
             "./vendor/bin/pest --init"
         ]
     },
