--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi",
+            "@php artisan install:api",
             "@php artisan livewire:layout",
             "@php artisan folio:install",
             "@php artisan volt:install",
