--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
@@ -69,7 +72,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
